--- a/css/styles.css
+++ b/css/styles.css
@@ -1,9 +1,3 @@
-* {
-  box-sizing: border-box;
-  margin: 0;
-  padding: 0;
-  background-color: aqua;
-}
 header {
   display: flex;
   justify-content: space-between;
@@ -21,4 +15,11 @@ header {
   border-radius: 50px;
   align-items: center;
   margin-right: 10px;
+}
+.row-1 {
+  box-sizing: content-box;
+  border: 30px white;
+  padding: 6px;
+  margin: 20px;
+  background-color: aqua;
 }
