--- a/css/styles.css
+++ b/css/styles.css
@@ -1,3 +1,6 @@
+body {
+  background-color: aqua;
+}
 header {
   display: flex;
   justify-content: space-between;
@@ -17,11 +20,10 @@ header {
   margin-right: 10px;
 }
 .row-1 {
-  box-sizing: content-box;
   border: 30px white;
   padding: 6px;
   margin: 20px;
-  background-color: aqua;
+  background-color: white;
   color: black;
 }
 h2 {
