--- a/css/styles.css
+++ b/css/styles.css
@@ -1,6 +1,6 @@
 @import url("https://fonts.googleapis.com/css2?family=Roboto&display=swap");
 body {
-  background-color: aqua;
+  background-color: rgb(89, 134, 134);
 }
 header {
   display: flex;
@@ -12,7 +12,7 @@ header {
 .text-center {
   float: left;
   text-align: center;
-  color: #4a4e69;
+  color: #eeeff7;
   font-weight: 300;
   font-family: sans-serif;
 }
