--- a/css/styles.css
+++ b/css/styles.css
@@ -50,10 +50,12 @@ h2 {
   color: aliceblue;
 }
 button {
+  font-size: 12px;
   padding: 9px 25px;
   background-color: rgb(113, 113, 145);
   border-radius: 50px;
   border: none;
+  margin: none;
   transition: all 0.3s ease 0s;
 }
 @media screen and (max-width: 800px) {
