--- a/css/styles.css
+++ b/css/styles.css
@@ -58,6 +58,10 @@ button {
   margin: none;
   transition: all 0.3s ease 0s;
 }
+button:hover {
+  box-shadow: 0 12px 16px 0 rgba(0, 0, 0, 0.24),
+    0 17px 50px 0 rgba(0, 0, 0, 0.19);
+}
 @media screen and (max-width: 800px) {
   body {
     background-color: black;
