--- a/css/styles.css
+++ b/css/styles.css
@@ -15,11 +15,12 @@
 }
 /* navbar styles */
 .navbar{
-  position: fixed;
+  position: absolute;
   width: 100%;
-  padding: 15px 0;
-  background:  linear-gradient(120deg, #a1c4fd 0%, #c2e9fb 100%);
+  padding: 10px 0;
+  background:  linear-gradient(147deg, #ffe53b 0%, #fd3838 74%);
   font-family: 'ubuntu', sans-serif;
+  
 }
 
 .navbar .logo a {
@@ -49,9 +50,9 @@
   display: flex;
   /* background: url("/me.png") no-repeat center ; */
   height: 100vh;
-color: white;
-  background-color: #000000;
-background-image: linear-gradient(147deg, #000000 0%, #2c3e50 74%);
+color: rgb(17, 17, 17);
+/* background-color: #000000;
+background-image: linear-gradient(147deg, #00000075 30%, #97a5b3 74%); */
   min-height: 500px;
   font-family: 'ubuntu', sans-serif;
 
@@ -76,7 +77,7 @@ margin: auto 0 auto 40px;
   margin: 5px 0;
 }
 .distortion{
-  width: 700px;
+  width: 612px;
   height: 700px;
   align-self: flex-end;
  
@@ -87,25 +88,106 @@ margin: auto 0 auto 40px;
   font-weight: 500;
 }
 
+.me-card {
+  background-color: #ffe53b;
+  background-image: linear-gradient(147deg, #ffe53b 0%, #fd3838 74%);
+  min-height: 100vh;
+  font-family: 'Montserrat', sans-serif;
+  display: flex;
+}
+
+.blog-slider {
+  width: 95%;
+  position: relative;
+  max-width: 800px;
+  margin: auto;
+  background: #fff;
+  box-shadow: 0px 14px 80px rgba(34, 35, 58, 0.2);
+  padding: 25px;
+  border-radius: 25px;
+  height: 400px;
+  transition: all 0.3s;
+
+}
+@media screen and (max-width: 992px) {
+  .blog-slider {
+    max-width: 680px;
+    height: 400px;
+ }
+}
+@media screen and (max-width: 768px) {
+  .blog-slider {
+    min-height: 500px;
+    height: auto;
+    margin: 180px auto;
+ }
+}
+@media screen and (max-height: 500px) and (min-width: 992px) {
+  .blog-slider {
+    height: 350px;
+ }
+}
+.blog-slider__item {
+  display: flex;
+  align-items: center;
+}
+@media screen and (max-width: 768px) {
+  .blog-slider__item {
+    flex-direction: column;
+ }
+}
+.blog-slider__img {
+  width: 300px;
+  flex-shrink: 0;
+  height: 300px;
+  background-image: linear-gradient(147deg, #fe8a39 0%, #3d3030 74%);
+  box-shadow: 4px 13px 30px 1px rgba(252, 56, 56, 0.2);
+  border-radius: 20px;
+  transform: translateX(-80px);
+  overflow: hidden;
+}
+
+ .blog-slider__img:after {
+   content: '';
+   position: absolute;
+   top: 0;
+   left: 0;
+   width: 100%;
+   height: 100%;
+   border-radius: 20px;
+   opacity: 0.8;
+}
+
+.blog-slider__img img {
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+  display: block;
+
+  border-radius: 20px;
+  transition: all 0.3s;
+}
 
 
+/* .b-example-divider {
+  height: 3rem;
+  background-color: rgba(0, 0, 0, .1);
+  border: solid rgba(0, 0, 0, .15);
+  border-width: 1px 0;
+  box-shadow: inset 0 .5em 1.5em rgba(0, 0, 0, .1), inset 0 .125em .5em rgba(0, 0, 0, .15);
+} */
 
 
+.card{
+  width: 35rem; 
+  height: 50rem; 
+  margin-top: 100px;
+  
+  box-shadow: 19px 8px 51px 0px rgba(0,0,0,0.75);
+  -webkit-box-shadow: 19px 8px 51px 0px rgba(0,0,0,0.75);
+  -moz-box-shadow: 19px 8px 51px 0px rgba(0,0,0,0.75);
 
-
-
-
-
-
-
-
-
-
-
-
-
-
-
+}
 
 
 
