--- a/css/styles.css
+++ b/css/styles.css
@@ -27,6 +27,7 @@
   color: #fff;
   font-size: 35px;
   font-weight: 600;
+  text-decoration: none;
 }
 .navbar .menu li {
   list-style: none;
@@ -36,6 +37,9 @@
   color: #fff;
   font-weight: 500px;
   margin-left: 25px;
+  text-decoration: none;
+  transition: color 0.3s ease;
+
   
 
 }
@@ -44,6 +48,32 @@
   align-items: center;
   justify-content: space-between;
 }
+
+.navbar .menu li a:hover{
+  color: green;
+}
+
+
+
+
+/* 
+menu button */
+
+.menu-btn{
+  color: white;
+  font-size: 23px;
+  cursor: pointer;
+  display: none;
+
+}
+
+
+
+
+
+
+
+
 
 /* home section */
 .home{
@@ -169,13 +199,6 @@ margin: auto 0 auto 40px;
 }
 
 
-/* .b-example-divider {
-  height: 3rem;
-  background-color: rgba(0, 0, 0, .1);
-  border: solid rgba(0, 0, 0, .15);
-  border-width: 1px 0;
-  box-shadow: inset 0 .5em 1.5em rgba(0, 0, 0, .1), inset 0 .125em .5em rgba(0, 0, 0, .15);
-} */
 
 
 .card{
@@ -189,6 +212,54 @@ margin: auto 0 auto 40px;
 
 }
 
+@media(max-width: 947px){
+
+
+  .card{
+    width: 50rem; 
+    height: 50rem; 
+  }
+
+  .distortion{
+    width: 200px;
+    height: 200px;
+    align-self: flex-start;
+  }
+  .max-width{
+    padding: 0 50px;
+  }
+  .menu-btn{
+
+    display: block;
+    z-index: 999;
+  
+  }
+  .menu-btn i.active::before{content: "\f00d";}
+  
+  .navbar .menu{
+    position: fixed;
+    height: 100vh;
+    width: 100%;
+    left: -100%;
+    top: 0;
+    background:#111;
+    text-align: center;
+    padding-top: 80px;
+    transition: all 0.3s ease;
+
+  }
+  .navbar .menu.active{
+    left: 0;
+  }
+  .navbar .menu li{
+    display: block;
+  }
+  .navbar .menu li a{
+   display: inline-block; 
+   margin: 20px 0;
+   font-size: 25px;
+  }
+}
 
 
 
